--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "md5": "^2.3.0",
     "mongoose": "^7.6.3",
     "mongoose-encryption": "^2.1.2",
+    "mongoose-findorcreate": "^4.0.0",
     "node-fetch": "^3.2.6",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
   }
